# civicchain-backend

./: .dockerignore  .env.example  .gitignore  API_DOCUMENTATION.md  API_TESTING.md  CHANGELOG.md  CHANGES_SUMMARY.md  CONTRIBUTING.md  DATABASE_SCHEMA.md  DEPLOYMENT.md  DESIGN.md  DOCS.md  Dockerfile  EXAMPLES.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PRODUCTION_CHECKLIST.md  PROJECT_STRUCTURE.txt  QUICKSTART.md  README.md  SETUP.md  SMART_CONTRACT_SPEC.md  check-env.sh  docker-compose.yml  jest.config.js  package-lock.json  package.json  postman_collection.json  setup-db.sh  test-blockchain.js
.github/actions/: deploy.yaml
.github/workflows/: ci-cd.yml
coverage/: clover.xml  coverage-final.json  lcov.info
coverage/lcov-report/: index.html
migrations/: 001_initial_schema.sql  002_add_provider_id.sql  002_remove_privy_add_private_key.sql  003_add_privy_wallet_id.sql
scripts/: create-government-user.js  generate-sample-data.js
solana-contract/: Anchor.toml  Cargo.toml  README.md
solana-contract/programs/civicchain/: Cargo.toml
solana-contract/programs/civicchain/src/: lib.rs
src/: instrument.js  server.js
src/config/: database.js  index.js  migrationRunner.js  migrations.js  solana.js
src/controllers/: adminController.js  authController.js  issueController.js  userController.js  verificationController.js  voteController.js
src/db/: index.js
src/middleware/: auth.js  upload.js
src/routes/: admin.js  adminRoutes.js  authRoutes.js  issue.js  user.js  (+2 more)
tests/: controllers.test.js  infrastructure.test.js  jest.setup.js  services.test.js  utils.test.js
(+39 files in other folders)
