[package]
name = "civicchain"
version = "0.1.0"
description = "CivicChain Solana Smart Contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "civicchain"

[features]
idl-build = ["anchor-lang/idl-build"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
anchor-lang = "0.31.1"